--- a/package.json
+++ b/package.json
@@ -49,6 +49,10 @@
       "API_BUSINESS_PARTNER": {
         "kind": "odata-v2",
         "model": "srv/external/API_BUSINESS_PARTNER"
+      },
+      "northwind": {
+        "kind": "odata-v2",
+        "model": "srv/external/northwind"
       }
     },
     "hana": {
