--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
       "db": {
         "kind": "sql"
       },
-      "API_BUSINESS_PARTNER": {
+      "northwind": {
         "kind": "odata-v2",
         "model": "srv/external/northwind"
       }
