--- a/package.json
+++ b/package.json
@@ -42,17 +42,9 @@
     }
   },
   "cds": {
-    "requires": {
-      "db": {
-        "kind": "sql"
-      },
-      "northwind": {
-        "kind": "odata-v2",
-        "model": "srv/external/northwind"
-      }
-    },
-    "hana": {
-      "deploy-format": "hdbtable"
+    "Northwind": {
+      "kind": "odata-v2",
+      "model": "srv/external/Northwind"
     }
   }
 }
